# gentrig

./: .gitignore  CMakeLists.txt  README.md  gentrig.c  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: python-publish.yml
